# backend-frameworks

./: README.md
csharp-asp.net/: BookApi.sln
csharp-asp.net/BookApi/: Startup.cs
csharp-asp.net/BookApi/Controllers/: BookController.cs  BooksController.cs
csharp-asp.net/BookApi/Models/: Book.cs
csharp-asp.net/BookApi/Properties/: launchSettings.json
csharp-asp.net/BookApi/Repository/: BookRepository.cs  BooksRepository.cs
fsharp-asp.net/BookApi/: BookApi.fsproj  BookApi.sln  BooksRepository.fs  Program.fs  Startup.fs
fsharp-asp.net/BookApi/BookApi/: BookApi.fsproj  BookRepository.fs
fsharp-asp.net/BookApi/Controllers/: BookController.fs  BooksController.fs
fsharp-asp.net/BookApi/Properties/: launchSettings.json
go-gin/: go.mod  go.sum  main.go
javascript-node/: package-lock.json  package.json  server.js
python-flask/: app.py
rust-rocket/: Cargo.toml  Rocket.toml
rust-rocket/src/: main.rs
