[package]
name = "book-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077ba1d54b92cdef3e171a730b819d5eeb8e", features = [
    "json",
    "uuid",
] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
